--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ mybatis.config-location=classpath:/mybatis-config.xml
 
 
 #thymeleaf start
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 #开发时关闭缓存,不然没法看到实时页面
